--- a/app/src/main/res/layout/fragment_full_book.xml
+++ b/app/src/main/res/layout/fragment_full_book.xml
@@ -57,12 +57,12 @@
                     android:maxLines="5"
                     android:textSize="18sp" />
 
-
+                <!-- Changed to below fullBookSubTitle from below fullBookCover for better layout. -->
                 <TextView
                     android:id="@+id/fullBookDesc"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/fullBookCover"
+                    android:layout_below="@+id/fullBookSubTitle"
                     android:layout_margin="10dp"
                     android:layout_marginLeft="10dp"
                     android:ellipsize="end" />
