--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -12,8 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="8dp"
+        android:paddingEnd="16dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
+        android:paddingStart="16dp"
         android:paddingTop="16dp"
         app:columnCount="3"
         app:rowCount="2">
@@ -41,7 +43,7 @@
             android:scaleType="fitCenter"
             app:layout_columnWeight="1"
             app:layout_gravity="fill"
-            tools:src="@drawable/placeholder_crest" />
+            tools:src="@drawable/ic_black_crest_hi" />
 
         <TextView
             android:id="@+id/match_score"
@@ -61,7 +63,7 @@
             android:scaleType="fitCenter"
             app:layout_columnWeight="1"
             app:layout_gravity="fill"
-            tools:src="@drawable/placeholder_crest" />
+            tools:src="@drawable/ic_black_crest_hi" />
 
         <!-- Teams names -->
         <TextView
