--- a/app/src/main/res/layout/widget_item.xml
+++ b/app/src/main/res/layout/widget_item.xml
@@ -3,75 +3,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ffffff"
+    android:background="@color/material_grey_900"
+    android:gravity="center_vertical|center_horizontal"
     android:minHeight="?android:attr/listPreferredItemHeight"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/home_team_name"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        android:typeface="serif"
+        tools:text="Barcelona" />
 
-        <ImageView
-            android:id="@+id/home_team_crest"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginRight="8dp"
-            android:src="@drawable/placeholder_crest" />
 
-        <TextView
-            android:id="@+id/home_team_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:textColor="#111111"
-            tools:text="Barcelona" />
-
-        <TextView
+    <TextView
             android:id="@+id/home_team_score"
-            android:layout_width="0dp"
+        android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="5dp"
             android:gravity="right"
-            android:textColor="#111111"
-            tools:text="1" />
+        android:textColor="@color/accent"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:typeface="serif"
+        tools:text="1" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:text="-"
+        android:textColor="@android:color/white" />
 
-        <ImageView
-            android:id="@+id/away_team_crest"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginRight="8dp"
-            android:src="@drawable/placeholder_crest" />
+    <TextView
+        android:id="@+id/away_team_score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="10dp"
+        android:gravity="right"
+        android:textColor="@color/accent"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:typeface="serif"
+        tools:text="1" />
 
-        <TextView
+    <TextView
             android:id="@+id/away_team_name"
-            android:layout_width="0dp"
+        android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:textColor="#111111"
-            tools:text="Real Madrid" />
-
-        <TextView
-            android:id="@+id/away_team_score"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:textColor="#111111"
-            tools:text="1" />
-
-    </LinearLayout>
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        android:typeface="serif"
+        tools:text="Real Madrid" />
 
 
 </LinearLayout>
