--- a/app/src/main/res/xml/app_widget_info.xml
+++ b/app/src/main/res/xml/app_widget_info.xml
@@ -2,9 +2,9 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/widget_layout"
     android:initialLayout="@layout/widget_layout"
-    android:minHeight="180dp"
-    android:minWidth="180dp"
-    android:previewImage="@drawable/appwidget_preview"
+    android:minHeight="40dp"
+    android:minWidth="320dp"
+    android:previewImage="@drawable/widget_preview"
     android:resizeMode="vertical"
     android:updatePeriodMillis="14400000"
     android:widgetCategory="home_screen"></appwidget-provider>
