--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
+        android:layoutDirection="locale"
         android:scrollbars="horizontal"
         app:tabIndicatorHeight="4dp"
         app:tabMode="scrollable"
